# freecad-addon

./: MANIFEST.in  Readme.md  Todo.md  pyproject.toml
docs/: Debug.md  Overview.md
